# rufus_lite

./: .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  server.py
.streamlit/: config.toml
frontend/: index.html
rufus/: __init__.py  cache.py  cart.py  clip_retriever.py  demand.py  eval.py  fusion.py  graph.py  hardware.py  images.py  intent.py  inventory.py  llm.py  personalization.py  qdrant.py  rag.py  reranker.py  retriever.py  reviews.py  sc_rag.py  seller_qa.py  state.py  telemetry.py
scripts/: build_image_lookup.py  chat.py  download_all_data.py  download_datasets.py  drop_imageless_products.py  eval_ndcg.py  ingest_amazon_reviews_full.py  ingest_c4.py  ingest_clip.py  ingest_dataco.py  ingest_esci.py  ingest_instacart.py  ingest_olist.py  ingest_retailrocket.py  ingest_reviews_text.py  ingest_scms.py  ingest_uci_retail.py  query.py  rebuild_products_from_clip.py  start_qdrant.ps1  train_demand_forecast.py  update_qdrant_images.py
