[project]
name = "local-rufus"
version = "0.1.0"
description = "Local Rufus — conversational shopping AI (Amazon Rufus clone)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "ollama>=0.6.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "torch>=2.7.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "streamlit>=1.58.0",
    "pillow>=12.2.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "transformers>=4.40.0",
    "hatchling>=1.25.0",
    "ag-ui-protocol>=0.1.19",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.48.0",
    "kaggle>=1.5.0,<2.0.0",
    "openpyxl>=3.1.0",
    "datasetsforecast>=1.0.1",
    "statsforecast>=2.0.2",
    "neuralforecast>=3.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rufus"]

[tool.uv]
package = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
